[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/controls/timespan_control.gd" type="Script" id=1]
[ext_resource path="res://src/ui/controls/datetime_control.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/controls/time_control.tscn" type="PackedScene" id=3]

[node name="TimeSpanItem" type="MarginContainer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 585.0
margin_bottom = 24.0
color = Color( 0.133333, 0.211765, 0.454902, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 585.0
margin_bottom = 24.0

[node name="Label_From" type="Label" parent="HBoxContainer"]
visible = false
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "From"

[node name="TimeControl_From" parent="HBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_right = 317.0
margin_bottom = 20.0

[node name="DateTimeControl_From" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_right = 279.0
margin_bottom = 24.0

[node name="Label_To" type="Label" parent="HBoxContainer"]
visible = false
margin_left = 279.0
margin_top = 3.0
margin_right = 294.0
margin_bottom = 17.0
text = "To"

[node name="TimeControl_To" parent="HBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 340.0
margin_right = 620.0
margin_bottom = 20.0

[node name="DateTimeControl_To" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 283.0
margin_right = 562.0
margin_bottom = 24.0
edit_day = false

[node name="Button_Delete" type="Button" parent="HBoxContainer"]
margin_left = 566.0
margin_right = 585.0
margin_bottom = 24.0
text = "x"

[node name="Button_Apply" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 647.0
margin_right = 695.0
margin_bottom = 20.0
text = "Apply"

[connection signal="pressed" from="HBoxContainer/Button_Delete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_Apply" to="." method="_on_ButtonApply_pressed"]
